# piped

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
piped/: CMakeLists.txt  piped.hpp
test/: CMakeLists.txt
test/tests/simple/: simple.cpp  templates.cpp
